[package]
name = "client"
version = "0.0.1"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
common = { path = "../common" }
time = "0.1"
xmath = { version = "0.2.2", features = ["glium-support"] }
glium = { version = "0.14.0", default-features = false, features = ["glutin"] }
rand = "0.3.9"
obj-rs = { version = "0.4.19", features = ["glium-support"] }
bincode = "0.4"

[build-dependencies]
obj-rs = { version = "0.4.19", features = ["glium-support"] }
rustc-serialize = "0.3"
bincode = "0.4"
xz2 = "0.1.6"
